Changes for APR 1.1 [Deferring these features when 1.0 is rolled out.]

  *) Add a new PRNG. Note that the implementation of SHA-256 is a
     stop-gap pending snarfing the SHA-1 implementation from apr-util
     and upgrading it to do SHA-256. Not yet ready for prime time.
     [Ben Laurie]

Changes with APR 1.0

  *) The whole codebase was relicensed and is now available under
     the Apache License, Version 2.0 (http://www.apache.org/licenses).
     [Apache Software Foundation]

  *) Switch to a single, top-level make. [Greg Stein]

  *) Return an error instead of silently failing when apr_poll() is
     used with file descriptors >= FD_SETSIZE.  (Unix systems with
     no native poll())  [Jeff Trawick, Brad Nicholes]

  *) new error status APR_STATUS_IS_ENOTENOUGHENTROPY, Doxygen fixes
     [Sander Temme <sander at temme dot net]

  *) Add apr_socket_type_get() for retrieving the type (e.g., stream)
     of the socket.  [Philippe M. Chiasson]

  *) Removed deprecated interface apr_proc_other_child_check() 
     that behaved differently between win32 and unix.
     The unix behavor is now accomplished with
         apr_proc_other_child_refresh_all(APR_OC_REASON_RESTART)
     The win32 behavor is now accomplished with
         apr_proc_other_child_refresh_all(APR_OC_REASON_RUNNING)

  *) Removed apr_socket_opt_{get|set}(..., APR_SO_TIMEOUT) which
     was deprecated in favor of apr_socket_timeout_{get|set}().

  *) Change i386 FreeBSD to use the asm routines in apr_atomic.h
     to overcome issues with the FreeBSD atomic functions return
     type on i386. [David Reid]

  *) Added new versions of the apr_atomic functions for
     use with 32-bit ints  [Brian Pane]

  *) The following deprecated interfaces have been removed:

     apr_accept                   -> apr_socket_accept
     apr_allocator_get_mutex      -> apr_allocator_mutex_get
     apr_allocator_get_owner      -> apr_allocator_owner_get
     apr_allocator_set_max_free   -> apr_allocator_max_free_set